// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 light font 1`] = `
.c0 {
  font-size: 2.25rem;
  line-height: 3.375rem;
  font-weight: lighter;
}

<h1
  className="c0"
>
  Lorem Ipsum
</h1>
`;

exports[`H1 renders correctly 1`] = `
.c0 {
  font-size: 2.25rem;
  line-height: 3.375rem;
  font-weight: bold;
}

<h1
  className="c0"
>
  Lorem Ipsum
</h1>
`;
